restored index.js

--- a/remote/remote.html
+++ b/remote/remote.html
@@ -32,7 +32,7 @@
         <strong>Success!</strong> Zoom successfully launched on Gospel-Zoom
     </div>
     <div id="errorBox" class="alert alert-error">
-        <strong>Webinar Ended</strong> The Webinar ended. Hopefully that was on purpose
+        <strong>Webinar Ended</strong>Scan the QR code to start another meeting
     </div>
     <div id="page-home" class="page">
         <div id="previewScreenToggleBox"><a>Preview Feed:</a><input onclick="handlePreviewToggle(this.checked)" type="checkbox" id="previewScreenToggleBox"></div>
